SOFTWARE_FACTORY/kaanbal-templates/templates/frontend/vue3-spa/k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: placeholder-app
  labels:
    app: placeholder-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: placeholder-app
  template:
    metadata:
      labels:
        app: placeholder-app
    spec:
      containers:
      - name: placeholder-app
        image: nginx:stable-alpine
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 500m
            memory: 256Mi
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
